--- a/Portofolio.html
+++ b/Portofolio.html
@@ -42,7 +42,7 @@
 
                 <div class="hero-left">
                     <h3 class="pre-title">My name is</h3>
-                    <h1 class="hero-name">Yesha <span>Herwanta</span></h1>
+                    <h1 class="hero-name">arjub <span>Herwanta</span></h1>
                     <p>
                         An undergraduate student majoring in Business Information Technology at Bina Nusantara
                         University.
